added a reset button and changed the theme

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             <div class="innerBox" id="b9"></div>
         </div>
         <div class="result hidden3">
+            <button class="playagain">Play Again</button>
             <p style="transform: translateY(-200px);">O - WON</p>
         </div>
     <script src="script.js"></script>
